2015-12-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_node_text): Move an assignment 
	to a variable back where it was before, moved on 2015-12-19.  
	Fixes problem with display reported by Benno Schulenberg.

2015-12-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Remove spurious space at end of #! line.

2015-12-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 6.0.90.
	* configure.ac: version.

2015-12-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/Makefile.am (dist-hook): Remove backup files from t/infodir
	subdirectory.

2015-12-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\begindoublecolumns): If not much space left 
	on page, start a new page.

2015-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/test_scripts/coverage_formatting_utf8_enable_encoding.sh: 
	Turn off XS paragraph module because this causes the test to fail.

2015-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Move instructions for updating version earlier 
	in file.  Add instructions for updating texindex version.

2015-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variables.c (set_variable_to_value),
	* info/man.c (get_manpage_node),
	* info/info-utils.c (scan_reference_marker): Remove unused variables.
	* info/display.c (display_update_node_text): Move variable 
	declaration to start of block.

2015-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* gnulib: Run gnulib --add-import.

2015-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\begindoublecolumns): Remove \global 
	qualifier from an assignment to \vsize.
	(\enddoublecolumns): Some comments updated to reflect the fact 
	that \balancecolumns now saves its output in a box.

2015-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <misc commands>: If command
	@indent or @noindent is seen, start a new paragraph after the 
	spaces following the command.